User name iconspacing fix

--- a/css/main.css
+++ b/css/main.css
@@ -139,7 +139,7 @@ body {
 
 .grid-container-two {
     display: grid;
-    grid-template-columns: 1fr 2fr;
+    grid-template-columns: 18px 1fr;
     grid-template-rows: 100%;
 }
 
